Assessing influence on CPSSS of PAR-2 parameters that would give roughly scaling of gradient seen in vivo.

--- a/Notebooks/Par_RD_PDE.ipynb
+++ b/Notebooks/Par_RD_PDE.ipynb
@@ -57,9 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Try out breakdown for wild-type parameters with PAR-2 diffusion\n",
@@ -85,6 +83,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Try out breakdown for wild-type parameters with PAR-2 diffusion\n",
+    "# adapting roughly according to scaling relationship of gradients\n",
+    "\n",
+    "n = 8\n",
+    "wt = {'alpha': 1, 'beta': 2, 'dA': 0.23, 'dP': 0.15,\n",
+    "          'kAP': 0.19, 'kPA': 2, 'koffA': 0.0047,\n",
+    "          'koffP': 0.0054, 'konA': 0.00858, 'konP': 0.0474,\n",
+    "          'Ptot': 1, 'ratio': 1.56, 'sys_size': 134.6/2}\n",
+    "sizes = np.array([134.6/2,134.6/2,134.6/2,134.6/2,134.6/2,134.6/2,134.6/2,134.6/2])\n",
+    "siz = [copy.deepcopy(wt) for _ in sizes]\n",
+    "for i, dic in enumerate(siz):\n",
+    "    siz[i]['sys_size'] = sizes[i]\n",
+    "    siz[i]['dP'] = wt['dP']*s_factor[i]\n",
+    "    \n",
+    "s1 = Sim_Container(siz, no_workers=8)\n",
+    "s1.init_simus()\n",
+    "s1.run_simus()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -94,9 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "wt16 = {'alpha': 1, 'beta': 2, 'dA': 0.31, 'dP': 0.3,\n",
@@ -128,9 +149,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# s_wt16 = ParSim(param_dict=wt16, T=1000, grid_size=200)\n",
@@ -171,9 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def write_for_matlab(s, name):\n",
@@ -190,9 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "li = []\n",
@@ -226,9 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dA_polarized_fixTend_NateThresh = []\n",
@@ -250,9 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.plot(dA_polarized_fixTend_NateThresh, dP_polarized_fixTend_NateThresh,'.')\n",
@@ -263,9 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dA_polarized_Time14400 = []\n",
@@ -287,9 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.plot(dA_polarized_Time14400, dP_polarized_Time14400,'.')\n",
@@ -300,9 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dA_polarized_fixTend_Thresh03 = []\n",
@@ -324,9 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.plot(dA_polarized_fixTend_Thresh03, dP_polarized_fixTend_Thresh03,'.')\n",
@@ -337,9 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dA_polarized_fixTend = []\n",
@@ -361,9 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dA_polarized_fixTend_rerun = []\n",
@@ -385,9 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.plot(dA_polarized_fixTend_rerun, dP_polarized_fixTend_rerun,'.')\n",
@@ -398,9 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.plot(dA_polarized_fixTend, dP_polarized_fixTend,'.')\n",
@@ -418,9 +420,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "file = '/Users/hubatsl/Desktop/pickled_NateThresh/P_0.159493670886_dA_2.5.pickle'\n",
@@ -444,9 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "dA_polarized = []\n",
@@ -466,9 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# %matplotlib notebook\n",
@@ -483,9 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "in_vivo = {'alpha': 1, 'beta': 2, 'dA': 0.28, 'dP': 0.15,\n",
@@ -506,9 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "symmetric = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
@@ -529,9 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "s.pickle_data('d_versus_sigma')"
@@ -668,9 +658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "S = {'S': 134.6/2*np.logspace(-1, 1, 8)}\n",
@@ -687,9 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for s in Simus:\n",
@@ -699,9 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "s = [5, 10, 20, 39, 75, 144, 279, 538]\n",
@@ -803,9 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "symmetric = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
@@ -832,9 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "s.pickle_data('boundary_vs_AntOff')"
@@ -950,9 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mem = 0.009*1/(0.005+0.174*0.009)\n",
@@ -971,9 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "s = Sim_Container({'S': [0]}, sys='Tom', no_workers=1)\n",
@@ -992,9 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "s = Sim_Container({'S': [0]}, sys='TomHill', no_workers=1)\n",
@@ -1006,9 +980,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "s.simus[0].show_movie()"
@@ -1017,9 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fig, axs = plt.subplots(3,2)\n",
@@ -1339,9 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "symmetric = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
@@ -1364,9 +1332,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# with open('AntExample.pickle', 'rb') as f:\n",
@@ -1399,9 +1365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(3.75, 3.1))\n",
@@ -1430,9 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "symmetric = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
@@ -1489,9 +1451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "symmetric = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
@@ -1549,9 +1509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "symmetric = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
@@ -1580,9 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "symmetric = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
@@ -1654,9 +1610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "symmetric = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
@@ -1762,9 +1716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "symmetric = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
@@ -1819,9 +1771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "plt.figure(figsize=(3.75, 3.1))\n",
@@ -1849,9 +1799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "symmetric = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
@@ -2479,9 +2427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from ParDetAsymm import ParSim, Sim_Container, s_to_v\n",
@@ -2592,9 +2538,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "symmetric = {'alpha': 2, 'beta': 2, 'dA': 0.1, 'dP': 0.1,\n",
@@ -2644,9 +2588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "with open('/Volumes/Transcend/PARmodellingData/pickled_FindA051217/ratio_0.989697265625size_39.4936708861.pickle', 'rb') as f:\n",
@@ -2691,9 +2633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Only P \n",
@@ -3039,5 +2979,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
